// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> Email, Password change event are called correctly with invalid Data, the form fails because the validations and Snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#f6f6f6",
      },
      {
        "width": "100%",
      },
    ]
  }
  testID="pet-view"
>
  <View
    style={
      [
        {
          "backgroundColor": "#f6f6f6",
        },
        {
          "alignItems": "center",
          "gap": 5,
          "justifyContent": "center",
        },
      ]
    }
    testID="pet-view"
  >
    <Text
      style={
        [
          {
            "color": "#11181C",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          {
            "paddingHorizontal": 50,
            "paddingVertical": 20,
          },
        ]
      }
      testID="pet-text"
    />
    <TextInput
      autoCapitalize="none"
      defaultValue=""
      onBlur={[Function]}
      onChangeText={[Function]}
      placeholderTextColor="#8e8e8e"
      style={
        [
          {
            "color": "#11181C",
          },
          {
            "borderColor": "#22D3EE",
            "borderRadius": 10,
            "borderWidth": 1,
            "height": 45,
            "paddingLeft": 25,
            "paddingRight": 25,
            "width": "85%",
          },
          undefined,
        ]
      }
      testID="login-email-input"
      value="test"
    />
    <Text
      style={
        [
          {
            "color": "#11181C",
          },
          {
            "fontSize": 14,
            "lineHeight": 20,
          },
          {
            "color": "red",
            "fontSize": 11,
            "margin": -5,
          },
        ]
      }
      testID="login-email-input-error"
    >
      value does not match email format
    </Text>
    <TextInput
      autoCapitalize="none"
      defaultValue=""
      onBlur={[Function]}
      onChangeText={[Function]}
      placeholderTextColor="#8e8e8e"
      secureTextEntry={true}
      style={
        [
          {
            "color": "#11181C",
          },
          {
            "borderColor": "#22D3EE",
            "borderRadius": 10,
            "borderWidth": 1,
            "height": 45,
            "paddingLeft": 25,
            "paddingRight": 25,
            "width": "85%",
          },
          undefined,
        ]
      }
      testID="login-password-input"
      value="pass"
    />
    <Text
      style={
        [
          {
            "color": "#11181C",
          },
          {
            "fontSize": 14,
            "lineHeight": 20,
          },
          {
            "color": "red",
            "fontSize": 11,
            "margin": -5,
          },
        ]
      }
      testID="login-password-input-error"
    >
      min length is 6
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#0e7490",
          "borderRadius": 10,
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
          "margin": 6,
          "opacity": 1,
          "padding": 8,
          "width": "85%",
        }
      }
      testID="pet-button"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#ffffff",
              "fontSize": 30,
            },
            [
              undefined,
            ],
            {
              "fontFamily": "ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        testID="pet-icon"
      >
        
      </Text>
      <Text
        style={
          [
            {
              "color": "#11181C",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#ffffff",
            },
          ]
        }
        testID="pet-text"
      />
    </View>
    <View
      style={
        [
          {
            "backgroundColor": "#f6f6f6",
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 5,
          },
        ]
      }
      testID="pet-view"
    >
      <Text
        style={
          [
            {
              "color": "#11181C",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            undefined,
          ]
        }
        testID="pet-text"
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="redirect-to-signup-label"
      >
        <Text
          style={
            [
              {
                "color": "#155e75",
              },
              {
                "color": "#0a7ea4",
                "fontSize": 16,
                "lineHeight": 30,
              },
              {
                "textDecorationLine": "underline",
              },
            ]
          }
          testID="pet-title"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`<Login /> Login renders correctly and Snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#f6f6f6",
      },
      {
        "width": "100%",
      },
    ]
  }
  testID="pet-view"
>
  <View
    style={
      [
        {
          "backgroundColor": "#f6f6f6",
        },
        {
          "alignItems": "center",
          "gap": 5,
          "justifyContent": "center",
        },
      ]
    }
    testID="pet-view"
  >
    <Text
      style={
        [
          {
            "color": "#11181C",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          {
            "paddingHorizontal": 50,
            "paddingVertical": 20,
          },
        ]
      }
      testID="pet-text"
    >
      header_message
    </Text>
    <TextInput
      autoCapitalize="none"
      defaultValue=""
      onBlur={[Function]}
      onChangeText={[Function]}
      placeholder="header_login_form_email"
      placeholderTextColor="#8e8e8e"
      style={
        [
          {
            "color": "#11181C",
          },
          {
            "borderColor": "#22D3EE",
            "borderRadius": 10,
            "borderWidth": 1,
            "height": 45,
            "paddingLeft": 25,
            "paddingRight": 25,
            "width": "85%",
          },
          undefined,
        ]
      }
      testID="login-email-input"
      value=""
    />
    <TextInput
      autoCapitalize="none"
      defaultValue=""
      onBlur={[Function]}
      onChangeText={[Function]}
      placeholder="header_login_form_password"
      placeholderTextColor="#8e8e8e"
      secureTextEntry={true}
      style={
        [
          {
            "color": "#11181C",
          },
          {
            "borderColor": "#22D3EE",
            "borderRadius": 10,
            "borderWidth": 1,
            "height": 45,
            "paddingLeft": 25,
            "paddingRight": 25,
            "width": "85%",
          },
          undefined,
        ]
      }
      testID="login-password-input"
      value=""
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#0e7490",
          "borderRadius": 10,
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
          "margin": 6,
          "opacity": 1,
          "padding": 8,
          "width": "85%",
        }
      }
      testID="pet-button"
    >
      <Text />
      <Text
        style={
          [
            {
              "color": "#11181C",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#ffffff",
            },
          ]
        }
        testID="pet-text"
      >
        header_log_in
      </Text>
    </View>
    <View
      style={
        [
          {
            "backgroundColor": "#f6f6f6",
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 5,
          },
        ]
      }
      testID="pet-view"
    >
      <Text
        style={
          [
            {
              "color": "#11181C",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            undefined,
          ]
        }
        testID="pet-text"
      >
        header_no_account_message
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="redirect-to-signup-label"
      >
        <Text
          style={
            [
              {
                "color": "#155e75",
              },
              {
                "color": "#0a7ea4",
                "fontSize": 16,
                "lineHeight": 30,
              },
              {
                "textDecorationLine": "underline",
              },
            ]
          }
          testID="pet-title"
        >
          header_sign_up
        </Text>
      </View>
    </View>
  </View>
</View>
`;
